--- a/pants.toml
+++ b/pants.toml
@@ -6,6 +6,8 @@ backend_packages = [
     "pants.backend.python.lint.flake8",
     "pants.backend.python.lint.isort",
     "pants.backend.python.typecheck.mypy",
+    "pants.backend.docker",
+    "pants.backend.docker.lint.hadolint",
 ]
 
 [python]
