--- a/src/resnet_torchserve/BUILD
+++ b/src/resnet_torchserve/BUILD
@@ -1,9 +1,3 @@
-files(
-    name="files",
-    sources=["create_mar.sh"]
-)
+files(name="files", sources=["create_mar.sh"])
 
-docker_image(
-    name="resnet-torchserve-example",
-    dependencies=[":files"]
-)
+docker_image(name="resnet-torchserve-example", dependencies=[":files"])
